<resources>
    <string name="app_name">iStockPro</string>
    <string name="welcome">Xush kelibsiz</string>
    <string name="sotish">Sotish</string>
    <string name="data">Ombor</string>
    <string name="print">Sotuvlar tarixi</string>
    <string name="settings">Sozlamalar</string>
    <string name="expense">Chiqimlar</string>
    <string name="report">Statistika</string>
    <string name="customers">Mijozlar</string>
    <string name="suppliers">Dillerlar</string>
    <string name="error">Xatolik</string>
    <string name="press_once_again_to_exit">Chiqish uchun yana bir bosing!</string>
    <string name="search_here">Qidiruv....</string>
    <string name="price">Sotilish narxi</string>
    <string name="stock">Tovar miqdori</string>
    <string name="stock1">Omborda bor</string>
    <string name="buy">Sotish bahosi</string>
    <string name="product_name">Tovar nomi</string>
    <string name="olingan_narxi">Olingan narx</string>
    <string name="want_to_delete_product">Tovarni o\'chirmoqchimisiz</string>
    <string name="product_deleted">Tovar o\'chirildi</string>
    <string name="failed">Xatolik</string>
    <string name="no">Yo\'q</string>
    <string name="yes">Ha</string>
    <string name="all_product">Tovarlar</string>
    <string name="no_product_fount">Ombor bo\'sh</string>
    <string name="data_exporting_please_wait">Ma\'lumotlar Excelga o\'tyapti</string>
    <string name="data_successfully_exported">Muffaqiyatli saqlandi</string>
    <string name="data_export_fail">Ma\'lumotlarni saqlashda muammo</string>
    <string name="export_data_to_excel">Excelga o\'tkazish</string>
    <string name="product_code">Tovar QR kodi</string>
    <string name="product_category">Kategoriya</string>
    <string name="product_buy">Tovarni olingan narxi</string>
    <string name="product_stock">Tovar jami miqdori</string>
    <string name="product_price">Tovarning sotilish narxi</string>
    <string name="product_weight_unit">Tovarning o\'lchov birligi</string>
    <string name="product_last_update">Oxirgi o\'zgartirilgan vaqt</string>
    <string name="product_information">Qo\'shimcha ma\'lumot</string>
    <string name="product_supplier">Yetkazib beruvchi</string>
    <string name="add_product">Tovarni qo\'shish</string>
    <string name="product_total_qty">total_qty</string>
    <string name="product_disc_qty">disc qty</string>
    <string name="product_weight">Product_weight</string>
    <string name="type_something_to_search">Qidirish</string>
    <string name="cancel">Yopish</string>
    <string name="product_name_cannot_be_empty">Tovar nomi bo\'sh</string>
    <string name="product_category_cannot_be_empty">Tovar kategoriyasi bo\'sh</string>
    <string name="product_buy_cannot_be_empty">Tovar kelgan narxi bo\'sh</string>
    <string name="product_stock_cannot_be_empty">Miqdori bo\'sh</string>
    <string name="product_price_cannot_be_empty">Tovar Sotilish narxi bo\'sh</string>
    <string name="product_weight_cannot_be_empty">Tovar O\'lchovi bo\'sh</string>
    <string name="product_supplier_cannot_be_empty">Yetkazib beruvchi bo\'sh</string>
    <string name="product_successfully_added">Tovar saqlandi</string>
    <string name="import_from_excel">Exceldan filedan yuklab olish</string>
    <string name="no_file_found">File topilmadi</string>
    <string name="data_importing_please_wait">Yuklanyapti...</string>
    <string name="data_successfully_imported">Muffaqiyatli yuklandi!</string>
    <string name="data_import_fail">File yuklashda xatolik!</string>
    <string name="kasir">Sotish</string>
    <string name="ten">10</string>
    <string name="reset">Barcha tovarlar</string>
    <string name="no_product_found">Tovar topilmadi!</string>
    <string name="add_to_cart">Savatga qo\'shish</string>
    <string name="stock_is_low_please_update_stock">Bu tovar omborda qolmagan!</string>
    <string name="product_already_added_to_cart">Savatda bu tovar bor</string>
    <string name="product_added_to_cart">Savatga qo\'shildi</string>
    <string name="product_added_to_cart_failed_try_again">Xatolik</string>
    <string name="category_name">Katergoriya</string>
    <string name="want_to_delete_category">O\'chirmoqchimisiz</string>
    <string name="category_deleted">O\'chirildi</string>
    <string name="no_data_found">Topilmadi</string>
    <string name="action_settings">Sozlamalar</string>
    <string name="qr_barcode_scanner">"QR code "</string>
    <string name="camera_permission">Ruxsat</string>
    <string name="cart_price">narx</string>
    <string name="one">1</string>
    <string name="symbol_plus">+</string>
    <string name="cart_weight">weight</string>
    <string name="total_price">Jami to\'lov</string>
    <string name="product_removed_from_cart">Tovar o\'chirildi</string>
    <string name="available_stock">Ombordagi tovar miqdori</string>
    <string name="no_product_in_cart">Tovar yo\'q</string>
    <string name="submit_order">To\'lov</string>
    <string name="product_cart">Savat</string>
    <string name="edit_product">Tovarni o\'zgartitish</string>
    <string name="update_product">O\'zgartirishni saqlash</string>
    <string name="product_details">Tovar tavsiloti</string>
    <string name="update_successfully">muffaqiyatli o\'zgartirildi!</string>
    <string name="pic_load_error">Error in loading picture</string>
    <string name="order_receipt">Chek</string>
    <string name="share">Ulashing</string>
    <string name="open_pdf">Pdf ochish</string>
    <string name="open_with_external_pdf_reader">Pdf</string>
    <string name="print_succ">check muffaqiyatli</string>
    <string name="print_error">Xatolik</string>
    <string name="button_scan">Qurilmani topish</string>
    <string name="title_paired_devices">Ulangan qurilmalar</string>
    <string name="title_other_devices">Yangi qurilmalar</string>
    <string name="select_device">Tanlash</string>
    <string name="none_found">Topilmadi</string>
    <string name="none_paired">Ulanmagan</string>
    <string name="scanning">Scanning...</string>
    <string name="qty">Miqdori</string>
    <string name="weight">O\'lchov birligi</string>
    <string name="total_cost">Jami summa</string>
    <string name="quantity">Miqdori</string>
    <string name="weight_order_details">O\'chov birligi</string>
    <string name="no_order_found">Topilmadi</string>
    <string name="total_tax">Xizmat uchun</string>
    <string name="discount">Skidka</string>
    <string name="generate_pdf_receipt">Pdf ga o\'tkazish</string>
    <string name="print_thermal">Chekni chiqarish</string>
    <string name="order_details">Tovar Cheki</string>
    <string name="sub_total">Jami to\'lov</string>
    <string name="xizmatUchun">Xizmat uchun</string>
    <string name="skidika">Skidka</string>
    <string name="jamisumma">Jami summa</string>
    <string name="order_id">Sotuv ID</string>
    <string name="payment_method">To\'lov Turi</string>
    <string name="order_type">Sotuv turi</string>
    <string name="customer_name">Mijoz ismi</string>
    <string name="order_status">Order Status</string>
    <string name="date">Vaqt</string>
    <string name="change_order_status">Chek Status</string>
    <string name="please_change_order_status_to_complete_or_cancel">Marhamat Chek statusini belgilang</string>
    <string name="order_completed">Muffaqiyatli</string>
    <string name="cancel_order">Bekor qilish</string>
    <string name="order_updated">Muffaqiyatli</string>
    <string name="order_history">Sotuvlar tarihi</string>
    <string name="not_connected">no connection</string>
    <string name="connected">Ulandi</string>
    <string name="connect_fail">connection failed</string>
    <string name="connect_lost">Connection lost</string>
    <string name="bluetooth_not_available">bluetooth not available</string>
    <string name="turnon_bluetooth">turn on_bluetooth</string>
    <string name="payment">To\'lov</string>
    <string name="submit">TASDIQLASH</string>
    <string name="walk_in_customer">"Mijoz "</string>
    <string name="pick_up">Tovar olib ketish</string>
    <string name="cash">To\'lov turi</string>
    <string name="zero_zero">00</string>
    <string name="zero_zero_zero">0.00</string>
    <string name="discount_cant_be_greater_than_total_price">Skidka tovar narhidan past bo\'lishi kerak</string>
    <string name="select_customer">Mijozni tanlash</string>
    <string name="select_order_type">Tovarni olib ketuvchi</string>
    <string name="select_payment_method">To\'lov turi</string>
    <string name="order_done_successful">Muffaqiyatli</string>
    <string name="add_category">Kategoriya qo\'shish</string>
    <string name="enter_category_name">Kategoriya nomi</string>
    <string name="category_added_successfully">Kategoriya qo\'shildi</string>
    <string name="categories">Kategoriyalar</string>
    <string name="edit">O\'zgartirish</string>
    <string name="update_category">Saqlash</string>
    <string name="edit_category">Kategoriyani o\'zgartirish</string>
    <string name="category_updated">Kategoriya o\'zgartirildi</string>
    <string name="payment_method_name">To\'lov turi</string>
    <string name="add_payment_method">Qo\'shish</string>
    <string name="successfully_added">Qo\'shildi</string>
    <string name="enter_payment_method_name">To\'lov turi</string>
    <string name="update_payment_method">Saqlash</string>
    <string name="successfully_updated">O\'zgartirildi</string>
    <string name="shop_name">Do\'kon nomi</string>
    <string name="shop_contact_number">Telefon raqam</string>
    <string name="shop_email">Email pochta</string>
    <string name="shop_address">Do\'kon manzili</string>
    <string name="currency_symbol">Valyuta</string>
    <string name="shop_currency">Pul birligi</string>
    <string name="tax_in_percentage">Xizmat uchun haq %</string>
    <string name="tax">Xizmat uchun haq</string>
    <string name="shop_information">Do\'kon ma\'lumotlari</string>
    <string name="shop_name_cannot_be_empty">Bo\'sh</string>
    <string name="shop_information_updated_successfully">Qo\'shildi</string>
    <string name="weight_unit_name">O\'lchov birligi</string>
    <string name="add_weight_unit">Qo\'shish</string>
    <string name="weight_unit_added_successfully">Qo\'shildi</string>
    <string name="enter_weight_unit_name">O\'lchov birligini yozing</string>
    <string name="update_weight_unit">Saqlash</string>
    <string name="edit_weight_unit">O\'lchov birligi</string>
    <string name="weight_unit_updated">O\'zgartirildi</string>
    <string name="weight_unit">O\'lchov birligi</string>
    <string name="weight_deleted">O\'chirildi</string>
    <string name="want_to_delete_weight_unit">O\'chirish</string>
    <string name="payment_methods">To\'lov turi</string>
    <string name="data_backup">Zahiralash</string>
    <string name="update_information">Saqlash</string>
    <string name="all_payment_method">To\'lov turlari</string>
    <string name="want_to_delete">O\'chirmoqchimisiz</string>
    <string name="payment_method_deleted">O\'chirildi</string>
    <string name="expense_name">Chiqim nomi</string>
    <string name="expense_note_if_any">Eslatma</string>
    <string name="expense_note">Eslatma yozing..</string>
    <string name="expense_amount">Sum</string>
    <string name="expense_date">Sana</string>
    <string name="expense_time">Vaqt</string>
    <string name="add_expense">Chiqimni qo\'shish</string>
    <string name="expense_successfully_added">Qo\'shildi</string>
    <string name="expense_name_cannot_be_empty">Bo\'sh</string>
    <string name="edit_expense">O\'zgartitish</string>
    <string name="expense_date_time">Vaqt</string>
    <string name="expense_note_space">Eslatma</string>
    <string name="note">Eslatma</string>
    <string name="want_to_delete_expense">O\'chirmoqchimisiz</string>
    <string name="expense_deleted">O\'chirildi</string>
    <string name="all_expense">Barcha Chiqimlar</string>
    <string name="all_sales_report">Barcha sotuvlar tarixi</string>
</resources>