<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cart_product_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:srcCompat="@drawable/image_placeholder"
                    tools:ignore="InefficientWeight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:padding="2dp"
                    android:visibility="visible"
                    android:text="@string/cart_price"
                    android:textColor="#EA1D2C" />

                <TextView
                    android:id="@+id/tv_olchov_bir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:padding="2dp"
                    android:text="@string/cart_weight"
                    android:textColor="#EA1D2C" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_change"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_baseline_create_24"
                        android:layout_marginEnd="@dimen/_15sdp"
                        tools:ignore="ContentDescription" />
                    <ImageView
                        android:id="@+id/img_delete"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_delete"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/grLiner"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/grEdit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="50"
                        android:layout_gravity="center"
                        android:layout_weight="1.4"
                        android:ellipsize="end"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:text="gr"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/kgLiner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:visibility="visible"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/icon_minus" />

                    <TextView
                        android:id="@+id/tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/one"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/symbol_plus"
                        android:textColor="#D84315"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>